Fix url bar is not auto hidden on mobile chrome
Seems the root cause is the custom scrollbar. Remove it to workaround
the issue.

--- a/src/components/MainCharactersView.module.css
+++ b/src/components/MainCharactersView.module.css
@@ -1,6 +1,4 @@
 .container {
-  min-height: 0px;
-  min-width: 0px;
   width: 100%;
   height: 100%;
   overflow-x: hidden;
